--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,3 +75,31 @@ body {
   color: red;
   text-align: center;
 }
+
+button {
+  width: 75px;
+  height: 30px;
+  margin-right: 1%;
+}
+
+.updateForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input, textarea {
+  width: 300px;
+  height: 30px;
+  margin: 2% 0;
+}
+
+.updateBtn {
+  width: 125px;
+  margin-top: 2%;
+}
