--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,6 +53,31 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
+
+button {
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+  width: 65px;
+}
+
+button:hover {
+  background-color: green;
+  color: white;
+}
+
+.update-button {
+  position: absolute;
+  top: 60px;
+  right: 25px;
+}
+
+.delete-button {
+  position: absolute;
+  top: 95px;
+  right: 25px;
+}
+
 .save-button {
   position: absolute;
   top: 25px;
@@ -61,9 +86,10 @@ body {
   padding: 5px 10px;
   background-color: lightseagreen;
 }
-.save-button:hover {
-  background-color: green;
-  color: white;
+
+.updateBtn {
+  width: 125px;
+  margin-top: 2%;
 }
 
 .home-button {
@@ -71,15 +97,13 @@ body {
   background-color: lightskyblue;
 }
 
+.home-button a {
+  margin: 0 10px;
+}
+
 .movie-warning {
   color: red;
   text-align: center;
-}
-
-button {
-  width: 75px;
-  height: 30px;
-  margin-right: 1%;
 }
 
 .updateForm {
@@ -99,7 +123,4 @@ input, textarea {
   margin: 2% 0;
 }
 
-.updateBtn {
-  width: 125px;
-  margin-top: 2%;
-}
+
